--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
             <h2 class="section-title">About Me</h2>
             <p style="text-align: center; font-size: 1.1rem; max-width: 800px; margin: 0 auto; color: var(--text-secondary);">
                 I'm a passionate developer with experience in web technologies and software development. 
-                I love creating clean, efficient, and user-friendly applications. Welcome to my portfolio!
+                I love creating clean, efficient, and user-friendly applications. Welcome to my portfolio t!
             </p>
         </div>
     </section>
