--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
+                <li><a href="examples.html">Examples</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -29,15 +30,15 @@
         
         <div class="container">
             <div class="hero-content">
-                <h1>Lucas W.</h1>
-                <p class="subtitle">Full Stack Developer</p>
+                <h1>Yoda (Lucas W.)</h1>
+                <p class="subtitle">Full Stack Jedi Developer</p>
                 <p class="description">
-                    Crafting exceptional digital experiences through innovative code, 
-                    modern design principles, and cutting-edge technologies.
+                    "Strong with the Force of code, I am. Through modern technologies, 
+                    exceptional digital experiences I craft. Balance in the code, seek I do."
                 </p>
                 <div class="btn-group">
                     <a href="projects.html" class="btn btn-primary">View My Work</a>
-                    <a href="contact.html" class="btn btn-secondary">Get In Touch</a>
+                    <a href="contact.html" class="btn btn-secondary">Join the Alliance</a>
                 </div>
             </div>
         </div>
