--- a/projects.html
+++ b/projects.html
@@ -124,6 +124,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
+                <li><a href="examples.html">Examples</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
