--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
         
         <div class="container">
             <div class="hero-content">
-                <h1>Yoda (Lucas W.)</h1>
-                <p class="subtitle">Full Stack Jedi Developer</p>
+                <h1>Lucas W.</h1>
+                <p class="subtitle">Full Stack Developer</p>
                 <p class="description">
-                    "Strong with the Force of code, I am. Through modern technologies, 
-                    exceptional digital experiences I craft. Balance in the code, seek I do."
+                    Passionate about creating innovative digital experiences through modern web technologies. 
+                    Specialized in building scalable applications with clean, efficient code.
                 </p>
                 <div class="btn-group">
                     <a href="projects.html" class="btn btn-primary">View My Work</a>
-                    <a href="contact.html" class="btn btn-secondary">Join the Alliance</a>
+                    <a href="contact.html" class="btn btn-secondary">Get In Touch</a>
                 </div>
             </div>
         </div>
