--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     Specialized in building scalable applications with clean, efficient code.
                 </p>
                 <div class="btn-group">
-                    <a href="projects.html" class="btn btn-primary">View My Work</a>
+                    <a href="examples.html" class="btn btn-primary">View My Work</a>
                     <a href="contact.html" class="btn btn-secondary">Get In Touch</a>
                 </div>
             </div>
