--- a/contact.html
+++ b/contact.html
@@ -312,7 +312,7 @@
     </div>
     
     <script>
-        const DISCORD_USER_ID = '747833402866270220'; 
+        const DISCORD_USER_ID = 747833402866270220; 
         
         async function getDiscordStatus() {
             try {
